Closed
Bug 299343
Opened 21 years ago
Closed 20 years ago
Can't copy and paste into the beginning of a line
Categories
(Core :: DOM: Editor, defect)
Core
DOM: Editor
Tracking
()
RESOLVED
FIXED
People
(Reporter: boofy_bloke, Assigned: peterv)
References
Details
(Keywords: fixed1.8.1, regression, verified1.8.0.1)
Attachments
(2 files)
|
884 bytes,
patch
|
jst
:
review+
jst
:
superreview+
dveditz
:
approval1.8.0.1+
dveditz
:
approval1.8.1+
|
Details | Diff | Splinter Review |
|
884 bytes,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050629
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b2) Gecko/20050629
If I copy text in Composer I can't then paste it into the first space of
paragraphs, headings, plain text, URLs (i.e. after the ">" closing the opening
tag)(e.g. at the asterisk in "<p>*Text here"). It's fine anywhere else or with
text from another program.
Reproducible: Always
Comment 1•20 years ago
|
||
confirm bug exists in Seamonkey 1.0a
Comment 2•20 years ago
|
||
this regressed between linux trunk builds 2005-06-16-02 and 2005-06-17-05
==> editor
Assignee: composer → mozeditor
Component: Composer → Editor
OS: Windows XP → All
Product: Mozilla Application Suite → Core
Hardware: PC → All
Version: Other Branch → Trunk
Comment 3•20 years ago
|
||
*** Bug 318503 has been marked as a duplicate of this bug. ***
Comment 4•20 years ago
|
||
*** Bug 317638 has been marked as a duplicate of this bug. ***
Comment 5•20 years ago
|
||
CVS build from 2005-06-16 7:30 is broken, so this is from bug 286300
Assignee: mozeditor → peterv
Depends on: 286300
Updated•20 years ago
|
Flags: blocking1.9a1?
Flags: blocking1.8.1?
| Assignee | ||
Comment 6•20 years ago
|
||
Attachment #206196 -
Flags: superreview?(jst)
Attachment #206196 -
Flags: review?(jst)
Comment 7•20 years ago
|
||
Comment on attachment 206196 [details] [diff] [review]
v1
r+sr=jst
Attachment #206196 -
Flags: superreview?(jst)
Attachment #206196 -
Flags: superreview+
Attachment #206196 -
Flags: review?(jst)
Attachment #206196 -
Flags: review+
| Assignee | ||
Updated•20 years ago
|
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment 8•20 years ago
|
||
*** Bug 321145 has been marked as a duplicate of this bug. ***
Comment 9•20 years ago
|
||
Comment on attachment 206196 [details] [diff] [review]
v1
Highly visible regression (affects message compose and midas)
Attachment #206196 -
Flags: approval1.8.1?
Attachment #206196 -
Flags: approval1.8.0.1?
Comment 10•20 years ago
|
||
Comment on attachment 206196 [details] [diff] [review]
v1
a=dveditz for 1.8/1.8.0.1 branches. Please add the fixed1.8.1 and fixed1.8.0.1 keywords when checked in.
Attachment #206196 -
Flags: approval1.8.1?
Attachment #206196 -
Flags: approval1.8.1+
Attachment #206196 -
Flags: approval1.8.0.1?
Attachment #206196 -
Flags: approval1.8.0.1+
| Assignee | ||
Comment 11•20 years ago
|
||
The code on the trunk has moved since the 1.8 branch was created. Here is the patch ported to the 1.8 branch.
| Assignee | ||
Comment 12•20 years ago
|
||
Attachment 207886 [details] [diff] checked in on 1.8 and 1.8.0 branches.
To verify this fix in Firefox you can use http://www.mozilla.org/editor/midasdemo/ Check the "View HTML Source" checkbox, replace the '<br>' with '<p>abc</p>', uncheck the "View HTML Source" checkbox, select and copy the text ('abc') and try to paste it before the a. The paste will fail in a build without this fix, with this fix you should end up with 'abcabc'.
Keywords: fixed1.8.0.1,
fixed1.8.1
Comment 13•20 years ago
|
||
verified fixed on the branch using Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.8.0.1) Gecko/20060111 Firefox/1.5.0.1. I used Peter Van der Beken's excellent test case in Comment 12 to verify. Thanks Peter.
Keywords: fixed1.8.0.1 → verified1.8.0.1
Comment 14•20 years ago
|
||
Did this fix go in Thunderbird 1.5, because I see the same bug in a "message compose" window (to test, see description in duplicate https://bugzilla.mozilla.org/show_bug.cgi?id=318503)?
Tested with Thunderbird 1.5, new profile, no extensions. Windows XP SP 2, all updates.
Testcase with Thunderbird 1.5:
1. open a new message compose window in HTML-mode.
2. write something in the body window.
3. select some written text and position cursor at beginning of the line
4. paste does nothing (if cursor is somewhere in the text, it works).
| Assignee | ||
Comment 15•20 years ago
|
||
*** Bug 300427 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 16•20 years ago
|
||
This wasn't fixed in Thunderbird 1.5 afaik. I suppose 1.5.0.1 should pick it up from the 1.8.0.1 branch, but I'll try to find out if I need to do anything else.
Comment 17•20 years ago
|
||
(In reply to comment #16)
> This wasn't fixed in Thunderbird 1.5 afaik. I suppose 1.5.0.1 should pick it up
> from the 1.8.0.1 branch, but I'll try to find out if I need to do anything
> else.
Thanks for the reply - so no need to file a new bug.
Comment 18•20 years ago
|
||
Unfortunately we filed a dupe https://bugzilla.mozilla.org/show_bug.cgi?id=323949 This bug is very easy to duplicate for users that compose in HTML (many do) and when discovered degrades the perception of quality and confidence in the product. Our discussion confirming this bug on the Mozillazine Forums is here... -
http://forums.mozillazine.org/viewtopic.php?t=367695
OS is WinXP/32 sp2, Thunderbird Version is 1.5
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20051201
Thunderbird/1.5
Comment 19•20 years ago
|
||
*** Bug 323949 has been marked as a duplicate of this bug. ***
Comment 20•20 years ago
|
||
Art, the bug is fixed. Thunderbird 1.5 just shipped code that doesn't include the fix. Thunderbird 1.5.0.1 should fix that when it ships.
Comment 21•20 years ago
|
||
(In reply to comment #18)
> Unfortunately we filed a dupe
> https://bugzilla.mozilla.org/show_bug.cgi?id=323949 This bug is very easy to
> duplicate for users that compose in HTML (many do) and when discovered degrades
> the perception of quality and confidence in the product. Our discussion
> confirming this bug on the Mozillazine Forums is here... -
> http://forums.mozillazine.org/viewtopic.php?t=367695
>
> OS is WinXP/32 sp2, Thunderbird Version is 1.5
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8) Gecko/20051201
> Thunderbird/1.5
>
Installed Thunderbird 1.5 yesterday on Win98SE, plain, no extensions; encountered this bug in the VERY FIRST message I composed this morning. Definitely leaves a poor impression.
Comment 22•20 years ago
|
||
Andrew: we know. What do you expect to happen exactly? Time travel to happen and affect the Thunderbird 1.5 release? The next update to Thunderbird will have the fix.
Comment 23•20 years ago
|
||
(In reply to comment #22)
> Andrew: we know. What do you expect to happen exactly? Time travel to happen
> and affect the Thunderbird 1.5 release?
>
I'm not that stupid. Indulge me. I sound off on Bugzilla about twice a year. Some very annoying Mozilla Suite bugs never did get fixed, despite lots of discussion and promises, largely for lack of "squeaky wheels". I don't want the same fate for Thunderbird and Firefox.
Comment 24•20 years ago
|
||
(In reply to comment #23)
> I don't want the same fate for Thunderbird and Firefox.
At least Firefox team is trying to improve release process of 1.8 Branch(Fx 1.5.x and Fx 2).
See nexts.
- http://www.mozillazine.org/talkback.html?article=7819
- http://wiki.mozilla.org/Global:1.9_Trunk_1.8_Branch_Plan
I don't know about Thunderbird, but I have no hope on Tb because of denial of Bug 316812 for Tb 1.5.0.x...
Comment 25•20 years ago
|
||
(In reply to comment #24)
> I don't know about Thunderbird, but I have no hope on Tb because of denial of
> Bug 316812 for Tb 1.5.0.x...
Well, that's a mail-specific bug. The patch here is core, and is already in
the 1.8.0.x branch.
Comment 26•20 years ago
|
||
*** Bug 327852 has been marked as a duplicate of this bug. ***
Comment 27•20 years ago
|
||
*** Bug 326641 has been marked as a duplicate of this bug. ***
Comment 28•20 years ago
|
||
*** Bug 326298 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Flags: blocking1.9a1?
Flags: blocking1.8.1?
See Also: → https://launchpad.net/bugs/35994
You need to log in
before you can comment on or make changes to this bug.
Description
•