Fix for bug 299343 (Can't copy and paste into the beginning of a line). r/sr=jst.